pod-security/default/disallow-host-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-namespaces
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Default)
    policies.kyverno.io/description: Sharing the host namespaces must be disallowed.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: host-namespaces
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Sharing the host namespaces is disallowed.\nThe fields spec.hostNetwork, spec.hostIPC, and spec.hostPID must not be set to true.\n"
      pattern:
        spec:
          =(hostPID): "false"
          =(hostIPC): "false"
          =(hostNetwork): "false"
