pod-security/default/disallow-proc-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-proc-mount
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Default)
    policies.kyverno.io/description: The default /proc masks are set up to reduce attack surface, and should be required.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: proc-mount
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Changing the proc mount away from the defaults is disallowed.\nThe fields spec.containers[*].securityContext.procMount and spec.initContainers[*].securityContext.procMount must not be changed away from `Default`.\n"
      pattern:
        spec:
          initContainers:
          - =(securityContext):
              =(procMount): "Default"
          containers:
          - =(securityContext):
              =(procMount): "Default"
